<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Alarm</string>
    <string name="alarm_list">Alarm List</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="range">Range</string>
    <string name="new_alarm">New Alarm</string>
    <string name="action_settings">Setting</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="gps_message">GPS is disabled in your device. GPS should be active for work this application.</string>
    <string name="gps_button">Go to Settings Page To Enable GPS</string>
    <string name="message1">Welcome the Location Alarm.</string>
    <string name="message2">You can access the your alarm list that you can click the blue button lower the left corner.</string>
    <string name="message3">Please stamp which location do you want to set an alarm .</string>
    <string name="loc_not_be_found">The location could not be found.</string>

    <color name="white">#ffffff</color>

</resources>
