<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:background="#222222"
   	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddMarkerActivity" >

    
    
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
        android:text="@string/title"
        android:textColor="@color/white" />
   
    <EditText
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="0dp"
	    android:layout_marginRight="0dp"
	    android:layout_marginTop="15dp"
        android:maxLength="16"
        android:ems="10"
        android:textColor="@color/white"
       	android:singleLine="true"
       	android:inputType="text" />
    
    
    
  	<TextView
        android:id="@+id/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="0dp"
	    android:layout_marginTop="55dp"
        android:text="@string/content"
        android:textColor="@color/white" />
            
	<EditText
        android:id="@+id/cotentText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="0dp"
	    android:layout_marginRight="0dp"
	    android:layout_marginTop="70dp"
        android:maxLength="32"
        android:ems="10"
        android:textColor="@color/white"
        android:singleLine="true"
        android:inputType="text" />
    
    
	
    <TextView
        android:id="@+id/Range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="0dp"
	    android:layout_marginTop="110dp"
        android:text="@string/range"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="0dp"
	    android:layout_marginTop="110dp"
        android:text="" 
        android:textColor="@color/white"/>

    <SeekBar
        android:id="@+id/setRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="0dp"
	    android:layout_marginRight="0dp"
	    android:layout_marginTop="125dp"
        android:max="4950" />
    
  
    
	<TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentBottom="true"
	    android:layout_marginLeft="0dp"
	    android:layout_marginBottom="10dp"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="20sp" />
	
	<ToggleButton
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentBottom="true"
	    android:layout_marginLeft="60dp"
	    android:layout_marginBottom="0dp"
        android:checked="true"
        android:text="@string/status" />
	
    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentBottom="true"
	    android:layout_marginRight="0dp"
	    android:layout_marginBottom="0dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Cancel"
        android:layout_alignBottom="@+id/Cancel"
        android:layout_toLeftOf="@+id/Cancel"
        android:text="@string/add" />

</RelativeLayout>
